# OpenGL_Project_Boilerplate

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/core/: Camera.cpp  Camera.h  Entity.h  InputSystem.cpp  InputSystem.h  Registry.h
engine/platform/: Window.cpp  Window.h
engine/render/frontend/: RenderQueue.h  Renderer.cpp  Renderer.h
engine/render/opengl/: GLBuffer.cpp  GLBuffer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h
game/: CMakeLists.txt  main.cpp
game/components/: RenderComponents.h  TransformComponent.cpp
include/glad/: glad.h
